--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"bcrypt": "^5.1.0",
 		"dotenv": "^16.3.1",
 		"mongoose": "^7.4.1",
+		"node-html-parser": "^6.1.5",
 		"sveltekit-feather-icons": "^0.0.5"
 	}
 }
